add points and triangles

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,6 +24,8 @@ add_executable(
   collections/test_set.cpp
   graph/test_binary_tree.cpp
   graph/test_unweighted_graph.cpp
+  geometry/test_point.cpp
+  geometry/test_triangle.cpp
 )
 target_link_libraries(
   nll_tests
